# telco

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  pyproject.toml  pytest-coverage.txt
.github/workflows/: main-publish.yml  release-ci-automerge.yml  test-ci.yml
app/: main.py
app/api/: models.py
app/core/: config.py
app/prompts/: __init__.py  langfuse.py
data/kb/: billing_qna.json  plans_qna.json  troubleshooting_qna.json
data/kb_json/: billing_policy.json  service_plans.json  troubleshooting_guide.json
data/kb_md/: billing_policy.md  service_plans.md  troubleshooting_guide.md
docs/: system-prompt-structured-output.md
docs/design/: 2025-03-11-telco-agent-design.md
docs/plans/: 2025-03-11-refactor-singletons-to-classes-implementation.md  2025-03-11-refactor-singletons-to-classes.md  2025-03-11-telco-agent-implementation.md  2025-03-12-structured-output-design.md  2025-03-12-structured-output-implementation.md  2025-03-13-chat-streaming-design.md  (+3 more)
scripts/: ingest_kb.py  init.sh  run_langfuse_experiment.py
tasks/: part-b-evaluation-observability.md
tests/: conftest.py  test_agent.py  test_agent_integration_structured.py  test_agent_structured_output.py  test_api_models.py  test_api_routes.py  test_api_structured_output.py  test_callbacks.py  test_chat.py  test_chat_endpoint.py  test_chat_service.py  test_chat_service_structured.py  test_config.py  test_ingestion.py  test_knowledge_base.py  test_langfuse.py  test_langfuse_classification.py  test_main.py  test_qna_model.py  test_retriever.py  test_vector_store.py
(+12 files in other folders)
