[tool.poetry]
name = "telco"
version = "0.1.1"
description = "Telco Customer Service AI Agent"
authors = ["AI Engineer"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.135.1"
uvicorn = {extras = ["standard"], version = "^0.41.0"}
pydantic = "^2.12.5"
python-dotenv = "^1.0.0"

# LangChain
langchain = "^1.2.11"
langchain-openai = "^1.1.11"
langchain-qdrant = "^1.1.0"
langchain-text-splitters = "^1.1.1"

# Langfuse
langfuse = "^4.0.0"

# Qdrant Client
qdrant-client = "^1.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"
pytest-cov = "^7.0.0"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require external services like OpenAI API)"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
